feat : add findAllClients
